# Pelikuni-wallet

./: .gitignore  Cargo.toml  README.md  spec.yaml
.github/workflows/: ci.yml
.sqlx/: query-7a5f8a8e0822c245a3b3d04f5567f7e7cce7923e30bdfed8a388693ea79aef2c.json  query-8613fbeca8d1e9cfcc68331740f2b063b39ab30a16aeaa4093f0cc0c35e75044.json  query-ad60adc3248f1839b3a54d68ef2da5a8475607bfde4d87fff00c29fd36e9388e.json  query-aed6f98871b1139c7a941919c9eba3ed491c38d2656df96f0652d8b73e5b12f9.json  query-b066a6c294a591a393a7c3dad6af3d61fb9263a33920d9a46480b313ad2eacbc.json  query-ea0f02785a7e9e89992a040c0d086b5cdfa7f1a4a638e5e86799f0621b30d48b.json
history-service/: Cargo.toml
scripts/: init_db.sh
shared/src/: Cargo.toml  events.rs  lib.rs
wallet-service/: Cargo.toml
wallet-service/migrations/: 20260320112759_create_wallets.sql
wallet-service/src/: configuration.rs  kafka.rs  lib.rs  main.rs  startup.rs  telemetry.rs
wallet-service/src/domain/: mod.rs  repository.rs  wallet.rs  wallet_service.rs
wallet-service/src/routes/: mod.rs  wallets.rs
wallet-service/src/routes/home/: home.html
