[workspace]
resolver = "2"
members = ["wallet-service", "history-service", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kelechi Ebiri <ebirikele@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Web framework
actix-web = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Kafka
rdkafka = { version = "0.36", features = ["tokio"] }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Testing
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1"
