[workspace]
resolver = "2"
members = ["wallet-service", "history-service", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kelechi Ebiri <ebirikele@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Web framework
actix-web = "4.13.0"
tower = "0.5"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Kafka
rdkafka = { version = "0.39.0", features = ["tokio", "cmake-build"] }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
secrecy = { version = "0.10.3", features = ["serde"] }
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
tracing-actix-web = "0.7.21"
serde-aux = "4.7.0"


# Error handling
anyhow = "1"
thiserror = "2.0.18"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15.22"

# Testing
once_cell = "1"
