[package]
name = "wallet-service"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wallet-service"

[dependencies]
# Internal
shared = { path = "../shared" }

# Async runtime
tokio.workspace = true

# Web framework
actix-web.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Kafka
rdkafka.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Configuration
config.workspace = true

[dev-dependencies]
reqwest.workspace = true
once_cell.workspace = true
